<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cartBadge"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/badge_background"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/cartIcon"
        app:layout_constraintTop_toTopOf="@id/cartIcon"
        android:translationX="-5dp"
        android:translationY="-5dp" />



    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cartIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/cart"
        android:src="@drawable/ic_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logoImageView" />
    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="@+id/searchEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchEditText" />

    <LinearLayout
        android:id="@+id/filtersLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_by"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/price_range" />

        <RadioGroup
            android:id="@+id/priceRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/priceUnder50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/under_50" />

            <RadioButton
                android:id="@+id/price50to100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/a50_to_100" />

            <RadioButton
                android:id="@+id/priceOver100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/over_100" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/availableCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/available_only" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discounted_only"
                android:layout_gravity="center_vertical"/>

            <Switch
                android:id="@+id/discountSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reset_filters" />
    </LinearLayout>

    <ListView
        android:id="@+id/productsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filtersLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>